add reset value

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <input type="text" id="inputStarRadius" placeholder="Ведите число от 7 до 19"><br>
         <div id="msg"></div><br>
         <input type="button" value="Нарисовать" onclick="drawStar()"><br>
-        <input type="reset" onclick="clearStarDiv()">
+        <input type="reset" value="Сбросить"onclick="clearStarDiv()">
     </form>
     <div id="star"></div>
     <script src="script.js"></script>
